--- a/html-folders/following.html
+++ b/html-folders/following.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Website Template</title>
     <link rel="stylesheet" href="../css-folders/style.css">
+    <script src="../js-folders/script.js"></script>
 </head>
 <body>
     <header>
@@ -40,7 +41,162 @@
             </ul>
         </div>
     </header>
-
-    <script src="../js-folders/script.js"></script>
+    <div class="container">
+        <div class="header">
+            <h2>Following (??)</h2>
+            <div class="search-box">
+                <input type="text" placeholder="Search for a username...">
+                <button>🔍</button>
+            </div>
+        </div>
+        <div class="grid-container">
+            <!-- Repeat this block for each user -->
+            <div class="profile-card">
+                <div class="profile-pic"></div>
+                <div class="username">Username</div>
+                <a href="#" class="view-listings">View listings</a>
+            </div>
+            <div class="profile-card">
+                <div class="profile-pic"></div>
+                <div class="username">Username</div>
+                <a href="#" class="view-listings">View listings</a>
+            </div>
+            <div class="profile-card">
+                <div class="profile-pic"></div>
+                <div class="username">Username</div>
+                <a href="#" class="view-listings">View listings</a>
+            </div>
+            <div class="profile-card">
+                <div class="profile-pic"></div>
+                <div class="username">Username</div>
+                <a href="#" class="view-listings">View listings</a>
+            </div>
+            <div class="profile-card">
+                <div class="profile-pic"></div>
+                <div class="username">Username</div>
+                <a href="#" class="view-listings">View listings</a>
+            </div>
+            <div class="profile-card">
+                <div class="profile-pic"></div>
+                <div class="username">Username</div>
+                <a href="#" class="view-listings">View listings</a>
+            </div>
+            <div class="profile-card">
+                <div class="profile-pic"></div>
+                <div class="username">Username</div>
+                <a href="#" class="view-listings">View listings</a>
+            </div>
+            <div class="profile-card">
+                <div class="profile-pic"></div>
+                <div class="username">Username</div>
+                <a href="#" class="view-listings">View listings</a>
+            </div>
+            <div class="profile-card">
+                <div class="profile-pic"></div>
+                <div class="username">Username</div>
+                <a href="#" class="view-listings">View listings</a>
+            </div>
+            <div class="profile-card">
+                <div class="profile-pic"></div>
+                <div class="username">Username</div>
+                <a href="#" class="view-listings">View listings</a>
+            </div>
+            <div class="profile-card">
+                <div class="profile-pic"></div>
+                <div class="username">Username</div>
+                <a href="#" class="view-listings">View listings</a>
+            </div>
+            <div class="profile-card">
+                <div class="profile-pic"></div>
+                <div class="username">Username</div>
+                <a href="#" class="view-listings">View listings</a>
+            </div>
+            <div class="profile-card">
+                <div class="profile-pic"></div>
+                <div class="username">Username</div>
+                <a href="#" class="view-listings">View listings</a>
+            </div>
+            <div class="profile-card">
+                <div class="profile-pic"></div>
+                <div class="username">Username</div>
+                <a href="#" class="view-listings">View listings</a>
+            </div>
+            <div class="profile-card">
+                <div class="profile-pic"></div>
+                <div class="username">Username</div>
+                <a href="#" class="view-listings">View listings</a>
+            </div>
+            <!-- Add more profiles as needed -->
+        </div>
+    </div>
+    <style>
+        body {
+            font-family: 'Raleway', sans-serif;
+            background-color: #f2f2f2;
+        }
+        .container {
+            margin-top: 50px;
+            max-width: 900px;
+            background: white;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            margin: 50px auto 0 auto;
+        }
+        .header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 20px;
+        }
+        .header h2 {
+            margin: 0;
+        }
+        .search-box {
+            display: flex;
+            align-items: center;
+            background: #e0e0e0;
+            padding: 5px 10px;
+            border-radius: 5px;
+        }
+        .search-box input {
+            border: none;
+            background: transparent;
+            outline: none;
+            padding: 5px;
+        }
+        .search-box button {
+            border: none;
+            background: transparent;
+            cursor: pointer;
+        }
+        .grid-container {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+            gap: 15px;
+        }
+        .profile-card {
+            background: #e0e0e0;
+            padding: 10px;
+            border-radius: 5px;
+            text-align: center;
+        }
+        .profile-pic {
+            width: 50px;
+            height: 50px;
+            background: #bbb;
+            border-radius: 50%;
+            margin: auto;
+        }
+        .username {
+            font-weight: bold;
+            margin: 10px 0;
+        }
+        .view-listings {
+            color: blue;
+            text-decoration: none;
+            font-size: 14px;
+        }
+    </style>
 </body>
 </html>
